--- a/bikes-shop/src/App.css
+++ b/bikes-shop/src/App.css
@@ -1,39 +1,74 @@
 .introduction {
-  height: 28rem;
-  display: grid;
-  grid-template-columns: 4fr 2.5fr;
-  gap: 6rem;
+  display: flex;
+  padding: 2em 0em 3em 0em;
+  justify-content: space-evenly;
+  background-image: url(./img/Ellipse-5.svg);
+  background-repeat: no-repeat;
+  font-weight: 300;
+  font-size: 32px;
+  line-height: 39px;
+}
+
+#img-example-bike {
+  width: 100%;
+  height: auto;
   position: relative;
+  bottom: -2em;
+}
+
+#btn-show-all {
+  width: 278px;
+  height: 48px;
+  position: relative;
+  right: 2em;
+}
+.link-bikes {
+  width: 262px;
+  height: 20px;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 20px;
 }
 
 .bikes-introduction {
-  background-image: url(./img/Ellipse-5.svg);
-  background-repeat: no-repeat;
   padding: 3rem;
+  justify-self: stretch;
 }
-.choice-btns {
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  grid-template-rows: auto;
-  gap: 0rem;
+
+h1 {
+  font-weight: 300;
+  font-size: 60px;
+  line-height: 60px;
+  position: relative;
+  right: 1em;
 }
+
 h2 {
   text-align: center;
+  font-size: 60px;
+  line-height: 60px;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
 }
 .content {
   display: grid;
-  grid-template-columns: 2fr 2fr;
-  gap: 4rem;
+  grid-template-columns: auto auto;
+  gap: 0em;
+  align-items: center;
   grid-template-rows: auto repeat(2, 20rem) auto;
   gap: 7rem;
+  align-items: center;
   position: relative;
-  place-items: center;
 }
 .bike-section {
-  margin: 10px;
-  display: grid;
-  grid-template-columns: 2fr 2fr 2fr;
-  gap: 6rem;
+  margin-top: 2.5em;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .bike-container {
@@ -45,10 +80,6 @@ h2 {
 }
 .bike-type-img {
   width: 15rem;
-}
-
-.main {
-  margin-left: 10px;
 }
 
 .btn-select-type {
@@ -90,14 +121,26 @@ h2 {
   left: 48%;
 }
 .example-bike {
+  display: flex;
+  max-width: 100%;
+  height: auto;
   margin-top: 6rem;
 }
 
 .choice-btns {
+  display: flex;
+  justify-content: space-between;
+
   padding-top: 4rem;
   padding-bottom: 2rem;
+  border-bottom: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: rgba(0, 0, 0, 0.25);
 }
 
+/* .bike-filter {
+  
+} */
 .btn-select-color {
   height: fit-content;
   width: fit-content;
@@ -111,14 +154,15 @@ h2 {
   width: 2rem;
   height: 2rem;
 }
-
+.filter-label {
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 19px;
+}
 p {
   width: 22rem;
   margin: 20px;
 }
-HomePage {
+.homePage {
   margin-top: 2rem;
-}
-h2 {
-  margin-bottom: 3rem;
 }
